--- a/src/app/modules/wishlist/components/_main/main.component.html
+++ b/src/app/modules/wishlist/components/_main/main.component.html
@@ -7,5 +7,5 @@
   <p>If you have any questions, feel free to email me <a href="mailto:Zachary@admiralfeb.net?Subject=Questions%20about%20Wish%20List"
       target="_blank">Zachary@admiralfeb.net</a></p>
   <p>This is a general idea of what I would like. I like things that are useful.</p>
-  <p class="small text-right">Last update: 2018-10-10</p>
+  <p class="small text-right">Last update: {{updateDate}}</p>
 </div>
