--- a/src/app/modules/wishlist/components/tech/tech.component.html
+++ b/src/app/modules/wishlist/components/tech/tech.component.html
@@ -4,10 +4,11 @@
     <li>Accessories/Devices
       <ul>
         <li><a href="https://automatic.com/pro">Automatic Pro</a></li>
-        <li>Google Pixel 3<br>
+        <li><a href="https://store.google.com/product/pixel_3">Google Pixel 3</a><br>
           Additionally with the Pixel 3:
           <ul>
-            <li>Wireless Charger</li>
+            <li><a href="https://store.google.com/product/pixel_stand">Pixel Stand</a></li>
+            <li><a href="https://store.google.com/product/pixel_3_case_fabric">Pixel 3 Case - Color Carbon or Indigo</a></li>
           </ul>
         </li>
         <li>Google Pixel Slate<br>
@@ -38,8 +39,8 @@
     <li>Home Automation
       <ul>
         <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
-        <li>Google Home Hub<br>
-        <span class="note">I have preordered one of these devices for use in the kitchen. I may desire others should that one work well.</span></li>
+        <li><a href="https://store.google.com/product/google_home_hub">Google Home Hub</a><br>
+        <span class="note">I have one of these devices for use in the bedroom. It is handy for home automation use. Would like one for the office.</span></li>
       </ul>
     </li>
   </ul>
