--- a/src/app/modules/core/navbar/navbar.component.html
+++ b/src/app/modules/core/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="nav nav-pills navbar navbar-inverse sticky-top">
   <a class="linkImage" routerLink="home" title="Go to the Home Page"><img id="Z-img" src="../../../../assets/img/Z-img.png"></a>
-  <a class="nav-link" id="btnHome" routerLink="home" routerLinkActive="active" (click)="onClick($event.target.text)">Home</a>
-  <a class="nav-link" id="btnCode" routerLink="code" routerLinkActive="active" (click)="onClick($event.target.text)">Code</a>
-  <a class="nav-link" id="btnWL" routerLink="wishlist" routerLinkActive="active" (click)="onClick($event.target.text)">Wishlist</a>
+  <a class="nav-link" id="btnHome" routerLink="home" routerLinkActive="active">Home</a>
+  <a class="nav-link" id="btnCode" routerLink="code" routerLinkActive="active">Code</a>
+  <a class="nav-link" id="btnWL" routerLink="wishlist" routerLinkActive="active">Wishlist</a>
   <div class="ml-auto">
     <a class="nav-link navbar-right" href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site" target="_blank">Contact</a>
   </div>
