--- a/src/app/modules/shared-module/components/content-with-side-nav/content-with-side-nav.component.html
+++ b/src/app/modules/shared-module/components/content-with-side-nav/content-with-side-nav.component.html
@@ -1,4 +1,4 @@
-<div class="container" [class.mobile]="mobileQuery.matches">
+<div class="z-container" [class.mobile]="mobileQuery.matches">
   <mat-toolbar color="primary" class="toolbar">
     <button mat-icon-button (click)="snav.toggle()" [matTooltip]="burgerTip" matTooltipPosition="below"><mat-icon>menu</mat-icon></button>
     <h1 class="app-name">{{headerText}}</h1>
