--- a/src/app/modules/wishlist/components/money/money.component.scss
+++ b/src/app/modules/wishlist/components/money/money.component.scss
@@ -1,7 +1,5 @@
-h3 {
-    font-weight: bold;
-}
+@import '../../wishlist.scss';
 
-.jumbotron {
-  padding-top: 12px;
+strong{
+    color: mat-color($z-warn);
 }
