--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,12 @@
-<ng-container>
-  <nav class="navbar">
-    <a id="homeImage" routerLink="home" title="Go to the Home Page"><img id="Z-img" src="../../../../assets/img/Z-img.png"></a>
-    <a class="nav-link" id="btnHome" routerLink="home" routerLinkActive="active">Home</a>
-    <a class="nav-link" id="btnCode" routerLink="code" routerLinkActive="active">Code</a>
-    <a class="nav-link" id="btnWL" routerLink="wishlist" routerLinkActive="active">Wishlist</a>
-    <a class="nav-link" href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site" target="_blank">Contact</a>
-  </nav>
-</ng-container>
+<nav class="navbar">
+  <a id="homeImage" routerLink="home" matTooltip="Go to the Home Page" mat-button><img id="Z-img" src="../../../../assets/img/Z-img.png"></a>
+    <a class="nav-link" id="btnHome" routerLink="home" routerLinkActive="active" mat-icon-button matTooltip="Home Page">
+      <mat-icon>home</mat-icon>
+    </a>
+    <a class="nav-link" id="btnCode" routerLink="code" routerLinkActive="active" mat-flat-button>Code</a>
+    <a class="nav-link" id="btnWL" routerLink="wishlist" routerLinkActive="active" mat-flat-button>Wishlist</a>
+    <div class="ml-auto">
+      <a class="nav-link" href="mailto:Zachary@admiralfeb.net" matTooltip="Mail the owner of the site" target="_blank"
+      mat-flat-button>Contact</a>
+    </div>
+</nav>
