--- a/src/app/modules/code/modules/dining-selector/dining-selector.component.html
+++ b/src/app/modules/code/modules/dining-selector/dining-selector.component.html
@@ -2,6 +2,6 @@
   <h3 class="text-center">
     Welcome to {{ title }}!
   </h3>
-  <app-dining-option></app-dining-option>
-  <app-messages></app-messages>
+  <code-dining-selector-dining-option></code-dining-selector-dining-option>
+  <code-dining-selector-messages></code-dining-selector-messages>
 </div>
