--- a/src/app/modules/shared-module/components/content-with-side-nav/content-with-side-nav.component.scss
+++ b/src/app/modules/shared-module/components/content-with-side-nav/content-with-side-nav.component.scss
@@ -1,4 +1,4 @@
-.container {
+.z-container {
   display: flex;
   flex-direction: column;
   position: static;
@@ -27,23 +27,25 @@ mat-sidenav-container.is-mobile {
   flex: 1 0 auto;
 }
 
-a.active {
-  background-color: rgb(163, 73, 164);
-  color: white;
+a.active,
+.active {
+  background-color: rgb(163, 73, 164) !important;
+  color: white !important;
 }
-a:hover {
-  background-color: #ddd !important;
-  color: black !important;
+a:hover,
+button:hover,
+[mat-list-item]:hover {
+  background-color: #ddd;
+  color: black;
+  cursor: pointer;
 }
-nav-list .mat-list-item:hover {
-  background-color: #ddd !important;
-  color: black !important;
-}
+
 mat-nav-list{
   margin: 5px;
 }
 a.navItem {
   border-radius: 10px;
+  font-size: 14px;
 }
 
 
