--- a/src/app/modules/wishlist/components/_main/main.component.html
+++ b/src/app/modules/wishlist/components/_main/main.component.html
@@ -1,7 +1,7 @@
 <div id="main" class="jumbotron">
   <h3 class="text-center">Wishlist Home Page</h3>
   <div>
-    <p> The pages of the wishlist can be accessed from the navigation panel.<br>If on mobile, tap the <span class="material-icons md-12">menu</span> icon at the top of this page to open the panel.</p>
+    <p> The pages of the wishlist can be accessed from the navigation panel.<br>If on mobile, tap the <span class="material-icons md-12 align-text-bottom">menu</span> icon at the top-right of this page to open the panel.</p>
   </div>
   <p>An option is to make a donation in my name to any LGBTQ+ friendly charity. A few are listed on the <a routerLink="../money">money</a> page.</p>
   <p>If you have any questions, feel free to email me <a href="mailto:Zachary@admiralfeb.net?Subject=Questions%20about%20Wish%20List"
