--- a/src/app/modules/wishlist/components/_main/main.component.scss
+++ b/src/app/modules/wishlist/components/_main/main.component.scss
@@ -1,15 +1,6 @@
-h3 {
-  font-weight: bold;
-}
+@import '../../wishlist.scss';
 
-.content,
 .jumbotron {
   text-align: center;
 }
 
-#main {
-  padding-top: 12px;
-}
-#frmOneNote {
-  display: none;
-}
