--- a/src/app/modules/wishlist/components/clothing/clothing.component.scss
+++ b/src/app/modules/wishlist/components/clothing/clothing.component.scss
@@ -1,10 +1,5 @@
-h3 {
-    font-weight: bold;
-}
+@import '../../wishlist.scss';
 
-.jumbotron {
-  padding-top: 12px;
-}
 table { 
   border-collapse: separate;
   border-spacing: 2px;
