--- a/src/app/modules/wishlist/components/money/money.component.html
+++ b/src/app/modules/wishlist/components/money/money.component.html
@@ -20,7 +20,7 @@
         <li><a href="https://www.amazon.com/gift-cards/b/ref=nav_topnav_giftcert?ie=UTF8&node=2238192011">Amazon</a></li>
         <li><a href="https://www.bestbuy.com/site/Electronics/Gift-Cards/cat09000.c?id=cat09000">Best Buy</a></li>
         <li><a href="https://www.chipotle.com/en-us/shop/gift_cards/gift_cards.aspx">Chipotle</a></li>
-        <li>Crafting Shop for Yarn (<strong>NOT</strong> Hobby Lobby)</li>
+        <li>Crafting Shop for Yarn (<strong>NOT Hobby Lobby</strong>)</li>
         <li><a href="https://firehouse.giftcards.com/pages/home">FireHouse Subs</a></li>
         <li><a href="https://www.noodles.com/gift-cards/">Noodles and Company</a></li>
         <li><a href="https://prepaidcards.quiktrip.com/">QuikTrip</a></li>
