--- a/src/app/modules/wishlist/components/other/other.component.html
+++ b/src/app/modules/wishlist/components/other/other.component.html
@@ -5,12 +5,12 @@
       Movie basket(s) (popcorn, Mike n Ikes, Hot Tamales, etc. for a date night at home)
     </li>
     <li>
-      Star Trek memorabilia
+      Star Trek and other Sci-fi (Doctor Who, StarGate, Warehouse 13, etc) memorabilia
     </li>
     <li>
       フェリータイルのmemorabilia - Fairy Tail memorabilia
       <ul>
-        <li>I own multiple albums of their music already.</li>
+        <li class="note list-unstyled">I own multiple albums of their music already</li>
       </ul>
     </li>
     <li>漫画 - Manga
