--- a/src/app/modules/wishlist/components/tech/tech.component.html
+++ b/src/app/modules/wishlist/components/tech/tech.component.html
@@ -40,7 +40,7 @@
       <ul>
         <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
         <li><a href="https://store.google.com/product/google_home_hub">Google Home Hub</a><br>
-        <span class="note">I have one of these devices for use in the bedroom. It is handy for home automation use. Would like one for the office.</span></li>
+        <span class="note">I have one of these devices for use in the bedroom. It is handy for home automation use. I would like one for my office.</span></li>
       </ul>
     </li>
   </ul>
