--- a/src/app/modules/wishlist/components/tech/tech.component.scss
+++ b/src/app/modules/wishlist/components/tech/tech.component.scss
@@ -1,11 +1,2 @@
-h3 {
-    font-weight: bold;
-}
+@import '../../wishlist.scss';
 
-.jumbotron {
-  padding-top: 12px;
-}
-
-.note {
-  color: darkkhaki;
-}
