--- a/src/app/modules/wishlist/components/vids/vids.component.html
+++ b/src/app/modules/wishlist/components/vids/vids.component.html
@@ -2,7 +2,7 @@
   <h3 class="text-center">Video</h3>
   <ul>
     <li><i>Big Bang Theory</i> - Seasons 11 or 12</li>
-    <li>Series Sets - Not currently necessary as I can stream them.
+    <li>Series Sets - <span class="note">Not currently necessary as I can stream them.</span>
       <ul>
         <li>Syfy's <i>Eureka</i></li>
         <li><i>Star Trek</i>
