--- a/src/app/modules/wishlist/components/money/money.component.html
+++ b/src/app/modules/wishlist/components/money/money.component.html
@@ -1,32 +1,33 @@
 <div class="jumbotron">
   <h3 class="text-center">Money-Related Gifts</h3>
-  <ul>
-    <li>Donations
+
+  <h4>Donations</h4>
+  <ul class="list-style-none">
+    <li>529 (School) donation. <a href="mailto:Zachary@admiralfeb.net?Subject=529%20Donation">Contact</a> Zachary
+      regarding donations.</li>
+    <li>Donation to any LGBTQ+ friendly charity in my name. Those charities include, but are not limited to:
       <ul>
-        <li>529 (School) donation. <a href="mailto:Zachary@admiralfeb.net?Subject=529%20Donation">Contact</a> Zachary
-          regarding donations.</li>
-        <li>Donation to any LGBTQ+ friendly charity in my name. Those charities include, but are not limited to:
-          <ul>
-            <li><a href="https://www.aliforneycenter.org/">The Ali Forney Center</a> - provides shelter to homeless LGBTQ youth.</li>
-            <li><a href="http://www.gmhc.org/">GMHC</a> - provides HIV/AIDs prevention, care, and advocacy.</li>
-            <li><a href="http://www.transequality.org/">National Center for Transgender Equality</a> - works to end discrimination and violence against transgender people.</li>
-            <li><a href="https://www.thetrevorproject.org/">The Trevor Project</a> - provides crisis intervention and suicide prevention for LGBTQ ages 13-24.</li>
-          </ul>
-        </li>
+        <li><a href="https://www.aliforneycenter.org/">The Ali Forney Center</a> - provides shelter to homeless LGBTQ
+          youth.</li>
+        <li><a href="http://www.gmhc.org/">GMHC</a> - provides HIV/AIDs prevention, care, and advocacy.</li>
+        <li><a href="http://www.transequality.org/">National Center for Transgender Equality</a> - works to end
+          discrimination and violence against transgender people.</li>
+        <li><a href="https://www.thetrevorproject.org/">The Trevor Project</a> - provides crisis intervention and
+          suicide prevention for LGBTQ ages 13-24.</li>
       </ul>
     </li>
-    <li>Gift Cards
-      <ul>
-        <li><a href="https://www.amazon.com/gift-cards/b/ref=nav_topnav_giftcert?ie=UTF8&node=2238192011">Amazon</a></li>
-        <li><a href="https://www.bestbuy.com/site/Electronics/Gift-Cards/cat09000.c?id=cat09000">Best Buy</a></li>
-        <li><a href="https://www.chipotle.com/en-us/shop/gift_cards/gift_cards.aspx">Chipotle</a></li>
-        <li>Crafting Shop for Yarn (<strong>NOT Hobby Lobby</strong>)</li>
-        <li><a href="https://firehouse.giftcards.com/pages/home">FireHouse Subs</a></li>
-        <li><a href="https://www.noodles.com/gift-cards/">Noodles and Company</a></li>
-        <li><a href="https://prepaidcards.quiktrip.com/">QuikTrip</a></li>
-        <li><a href="http://www.target.com/c/giftcards/-/N-5xsxu#?lnk=gnav_giftcards">Target</a></li>
-        <li>Visa Gift Card</li>
-      </ul>
-    </li>
+  </ul>
+
+  <h4>Gift Cards</h4>
+  <ul class="list-style-none">
+    <li><a href="https://www.amazon.com/gift-cards/b/ref=nav_topnav_giftcert?ie=UTF8&node=2238192011">Amazon</a></li>
+    <li><a href="https://www.bestbuy.com/site/Electronics/Gift-Cards/cat09000.c?id=cat09000">Best Buy</a></li>
+    <li><a href="https://www.chipotle.com/en-us/shop/gift_cards/gift_cards.aspx">Chipotle</a></li>
+    <li>Crafting Shop for Yarn (<span class="important"><strong class="important">NOT</strong> Hobby Lobby</span>)</li>
+    <li><a href="https://firehouse.giftcards.com/pages/home">FireHouse Subs</a></li>
+    <li><a href="https://www.noodles.com/gift-cards/">Noodles and Company</a></li>
+    <li><a href="https://prepaidcards.quiktrip.com/">QuikTrip</a></li>
+    <li><a href="http://www.target.com/c/giftcards/-/N-5xsxu#?lnk=gnav_giftcards">Target</a></li>
+    <li>Visa Gift Card</li>
   </ul>
 </div>
