--- a/src/app/modules/wishlist/components/tech/tech.component.html
+++ b/src/app/modules/wishlist/components/tech/tech.component.html
@@ -1,24 +1,27 @@
 <div class="jumbotron">
   <h3 class="text-center">Technology</h3>
-  <ul>
-    <li>Accessories/Devices
-      <ul>
+
+  <h4>Accessories and Devices</h4>
+  <ul class="">
         <li><a href="https://automatic.com/pro">Automatic Pro</a></li>
-        <li><a href="https://store.google.com/product/pixel_3">Google Pixel 3</a><br>
-          Additionally with the Pixel 3:
+    <li>
+      <a href="https://store.google.com/product/pixel_3">Google Pixel 3</a><br>
+        Accessories:
           <ul>
             <li><a href="https://store.google.com/product/pixel_stand">Pixel Stand</a></li>
             <li><a href="https://store.google.com/product/pixel_3_case_fabric">Pixel 3 Case - Color Carbon or Indigo</a></li>
           </ul>
         </li>
-        <li>Google Pixel Slate<br>
-          Additionally with the Pixel Slate:
+    <li>
+      <a href="https://store.google.com/us/product/pixel_slate">Google Pixel Slate</a><br>
+        Accessories:
           <ul>
             <li>Folio Keyboard</li>
             <li>Pixel Slate Pen</li>
           </ul>
         </li>
-        <li>A new computer tower with the following:
+    <li>
+      <span class="important">A new computer tower with the following:
           <ul>
             <li>RAM 16 GB minimum</li>
             <li>500 GB (minimum) SSD HD</li>
@@ -27,21 +30,29 @@
             <li>Motherboard: Unknown</li>
             <li>Graphics card: Unknown</li>
           </ul>
+        </span>
         </li>
       </ul>
+
+  <h4>Home Automation<a name="homeAutomation"></a></h4>
+  <ul class="">
+    <li><a href="https://nest.com/cameras/">Nest Cam Indoor or Nest Cam IQ</a></li>
+    <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
+    <li>
+      <a href="https://store.google.com/product/google_home_hub">Google Home Hub</a><br>
+        <mat-chip-list>
+          <mat-chip color="accent" selected>I would like one for my office.</mat-chip>
+        </mat-chip-list>
     </li>
-    <!-- <li>Games
-      <ul>
-        <li><a href="https://steamcommunity.com/id/Admiralfeb/wishlist">Steam Wishlist</a></li>
-        <li>Note: I prefer PC gaming</li>
       </ul>
-    </li> -->
-    <li>Home Automation
-      <ul>
-        <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
-        <li><a href="https://store.google.com/product/google_home_hub">Google Home Hub</a><br>
-        <span class="note">I have one of these devices for use in the bedroom. It is handy for home automation use. I would like one for my office.</span></li>
-      </ul>
+
+  <h4>Games</h4>
+  <ul class="list-style-none">
+    <!-- <li><a href="https://steamcommunity.com/id/Admiralfeb/wishlist">Steam Wishlist</a></li> -->
+    <li>
+      <mat-chip-list>
+        <mat-chip color="accent" selected>I prefer PC gaming</mat-chip>
+      </mat-chip-list>
     </li>
   </ul>
 </div>
