--- a/src/app/modules/wishlist/components/crafting/crafting.component.html
+++ b/src/app/modules/wishlist/components/crafting/crafting.component.html
@@ -1,5 +1,8 @@
 <div class="jumbotron">
   <h3 class="text-center">Crafting Supplies</h3>
-  <p class="text-center">Please try again on Saturday.</p>
-  <under-construction></under-construction>
+  <mat-list>
+      <mat-list-item>
+        Differing types and colors of yarn
+      </mat-list-item>
+    </mat-list>
 </div>
