--- a/src/app/modules/wishlist/wishlist.scss
+++ b/src/app/modules/wishlist/wishlist.scss
@@ -4,10 +4,29 @@ h3 {
   font-weight: bold;
 }
 
+[mat-button] {
+  
+}
+
+.list-style-none{
+  list-style-type: none;
+}
+
 .jumbotron {
   padding-top: 12px;
 }
 
 .note {
   color: mat-color($z-accent);
+}
+.card-note {
+  background-color: mat-color($z-accent);
+}
+
+.important {
+  color: mat-color($z-warn);
+}
+mat-card.important {
+  color: white;
+  background-color: mat-color($z-warn);
 }
