Wishlist conversion to markdown

--- a/src/app/modules/wishlist/components/av/av.component.html
+++ b/src/app/modules/wishlist/components/av/av.component.html
@@ -1,36 +1,3 @@
 <div class="jumbotron">
-  <h3 class="text-center">Audio and Visual</h3>
-  <h4>Books</h4>
-  <ul class="list-style-none">
-    <li><a href="https://www.amazon.com/hz/wishlist/dl/invite/h2mGDQU">Amazon Books Wishlist</a></li>
-    <li>漫画 - Manga
-        <ul class="list-style-none">
-          <li>Can be for any anime I like. One of which is Fairy Tail</li>
-        </ul>
-      </li>
-  </ul>
-  <h4>Video</h4>
-  <ul class="list-style-none">
-    <li><i>Big Bang Theory</i> - Seasons 11 or 12</li>
-    <li>Series Sets - <span class="note">Not currently necessary as I can stream them.</span>
-      <ul>
-        <li>Syfy's <i>Eureka</i></li>
-        <li><i>Star Trek</i>
-          <ul>
-            <li>TNG</li>
-            <li>DS9</li>
-            <li>Voyager</li>
-            <li>Enterprise</li>
-          </ul>
-        </li>
-        <li><i>StarGate</i>
-          <ul>
-            <li>SG1</li>
-            <li>Atlantis</li>
-            <li>Universe</li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
+  <markdown ngPreserveWhitespaces [src]="markdownFile"></markdown>
 </div>
