--- a/src/app/modules/wishlist/components/other/other.component.html
+++ b/src/app/modules/wishlist/components/other/other.component.html
@@ -1,17 +1,3 @@
 <div class="jumbotron">
-  <h3 class="text-center">Other Stuff</h3>
-  <ul>
-    <li>
-      Movie basket(s) (popcorn, Mike n Ikes, Hot Tamales, etc. for a date night at home)
-    </li>
-    <li>
-      Star Trek and other Sci-fi (Doctor Who, StarGate, Warehouse 13, etc) memorabilia
-    </li>
-    <li>
-      フェリータイルのmemorabilia - Fairy Tail memorabilia
-      <ul>
-        <li class="note list-unstyled">I own multiple albums of their music already</li>
-      </ul>
-    </li>
-  </ul>
+  <markdown ngPreserveWhitespaces [src]="markdownFile"></markdown>
 </div>
