--- a/src/app/modules/wishlist/components/_main/main.component.html
+++ b/src/app/modules/wishlist/components/_main/main.component.html
@@ -1,5 +1,6 @@
 <div id="main" class="jumbotron">
   <h3 class="text-center">Wishlist Home Page</h3>
+  <p class="small text-right">Last update: {{updateDate}}</p>
   <div>
     <p> The pages of the wishlist can be accessed from the navigation panel.<br>If on mobile, tap the <span class="material-icons md-12 align-text-bottom">menu</span> icon at the top-right of this page to open the panel.</p>
   </div>
@@ -7,5 +8,6 @@
   <p>If you have any questions, feel free to email me <a href="mailto:Zachary@admiralfeb.net?Subject=Questions%20about%20Wish%20List"
       target="_blank">Zachary@admiralfeb.net</a></p>
   <p>This is a general idea of what I would like. I like things that are useful.</p>
-  <p class="small text-right">Last update: {{updateDate}}</p>
+  <p class="note">Anything in text like this is a note.</p>
+  <p class="important">Anything in text like this is important.</p>
 </div>
