--- a/src/app/modules/wishlist/components/clothing/clothing.component.html
+++ b/src/app/modules/wishlist/components/clothing/clothing.component.html
@@ -1,66 +1,29 @@
 <div class="jumbotron">
+  <markdown ngPreserveWhitespaces [src]="markdownFile"></markdown>
 
-  <h3 class="text-center">Clothing and Other Articles</h3>
-  <ul class="list-style-none">
-    <li><a href="https://www.amazon.com/hz/wishlist/dl/invite/fpF2d6T">Amazon Clothing Wishlist</a></li>
-    <li>T-Shirt Size - Adult Small</li>
-    <li>Oxford-type Shirts
-      <ul class="list-style-none">
-        <li>Measurements of my favorite shirt:
-          <ul>
-            <li>Slim fit</li>
-            <li>M/M</li>
-            <li>Neck: 15-15 1/2</li>
-            <li>Sleeves: 34-35</li>
-          </ul>
-        </li>
-        <li>Colors I have:
-          <ul>
-            <li>Light Blue</li>
-            <li>Royal Blue</li>
-            <li>Royal Purple</li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li>Dress pants
-      <ul class="list-style-none">
-        <li>Length: 32</li>
-        <li>Waist: 30</li>
-      </ul>
-    </li>
-    <li>Socks: I like ankle socks</li>
-    <li>Earrings
-      <ul class="list-style-none">
-        <li>Sterling Silver or Surgical Steel</li>
-        <li>Would like at least one of each stone in the table below.</li>
-        <li>The table is sortable.</li>
-      </ul>
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
-        <ng-container matColumnDef="stone">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Stone </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="mr-3">{{element.stone}} </div>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="month">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Month </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="mr-3">{{element.month}} </div>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="count">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Owned
-          </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="">{{element.count}} </div>
-          </td>
-        </ng-container>
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
+    <ng-container matColumnDef="stone">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Stone </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="mr-3">{{element.stone}} </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="month">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Month </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="mr-3">{{element.month}} </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="count">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Owned
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="">{{element.count}} </div>
+      </td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </li>
-  </ul>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
