--- a/src/app/modules/wishlist/components/crafting/crafting.component.html
+++ b/src/app/modules/wishlist/components/crafting/crafting.component.html
@@ -1,8 +1,3 @@
 <div class="jumbotron">
-  <h3 class="text-center">Crafting Supplies</h3>
-  <mat-list>
-      <mat-list-item>
-        Differing types and colors of yarn
-      </mat-list-item>
-    </mat-list>
+  <markdown ngPreserveWhitespaces [src]="markdownFile"></markdown>
 </div>
