--- a/src/app/modules/wishlist/components/tech/tech.component.html
+++ b/src/app/modules/wishlist/components/tech/tech.component.html
@@ -1,58 +1,3 @@
 <div class="jumbotron">
-  <h3 class="text-center">Technology</h3>
-
-  <h4>Accessories and Devices</h4>
-  <ul class="">
-        <li><a href="https://automatic.com/pro">Automatic Pro</a></li>
-    <li>
-      <a href="https://store.google.com/product/pixel_3">Google Pixel 3</a><br>
-        Accessories:
-          <ul>
-            <li><a href="https://store.google.com/product/pixel_stand">Pixel Stand</a></li>
-            <li><a href="https://store.google.com/product/pixel_3_case_fabric">Pixel 3 Case - Color Carbon or Indigo</a></li>
-          </ul>
-        </li>
-    <li>
-      <a href="https://store.google.com/us/product/pixel_slate">Google Pixel Slate</a><br>
-        Accessories:
-          <ul>
-            <li>Folio Keyboard</li>
-            <li>Pixel Slate Pen</li>
-          </ul>
-        </li>
-    <li>
-      <span class="important">A new computer tower with the following:
-          <ul>
-            <li>RAM 16 GB minimum</li>
-            <li>500 GB (minimum) SSD HD</li>
-            <li>1 TB HD (this may be SSD or not)</li>
-            <li>Processor: Unknown</li>
-            <li>Motherboard: Unknown</li>
-            <li>Graphics card: Unknown</li>
-          </ul>
-        </span>
-        </li>
-      </ul>
-
-  <h4>Home Automation<a name="homeAutomation"></a></h4>
-  <ul class="">
-    <li><a href="https://nest.com/cameras/">Nest Cam Indoor or Nest Cam IQ</a></li>
-    <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
-    <li>
-      <a href="https://store.google.com/product/google_home_hub">Google Home Hub</a><br>
-        <mat-chip-list>
-          <mat-chip color="accent" selected>I would like one for my office.</mat-chip>
-        </mat-chip-list>
-    </li>
-      </ul>
-
-  <h4>Games</h4>
-  <ul class="list-style-none">
-    <!-- <li><a href="https://steamcommunity.com/id/Admiralfeb/wishlist">Steam Wishlist</a></li> -->
-    <li>
-      <mat-chip-list>
-        <mat-chip color="accent" selected>I prefer PC gaming</mat-chip>
-      </mat-chip-list>
-    </li>
-  </ul>
+  <markdown ngPreserveWhitespaces [src]="markdownFile"></markdown>
 </div>
