--- a/src/app/components/_main/main.component.html
+++ b/src/app/components/_main/main.component.html
@@ -3,12 +3,12 @@
 </div>
 <div class="jumbotron">
   <div>
-    <p>Hiya. I'm Zachary and this is my site. It has what I think is cool (see below for the next trailer of Doctor Who), some of my coding projects which can be found on the <a routerLink="../code">Code page</a>, and my <a routerLink="../wishlist">wishlist</a> if anyone really wants to know what to get for me.</p>
+    <p>Hiya. I'm Zachary and this is my site. It has what I think is cool, some of my coding projects which can be found on the <a routerLink="../code">Code page</a>, and my <a routerLink="../wishlist">wishlist</a> if anyone really wants to know what to get for me.</p>
     <p>Have fun and see you around!</p>
     <p>Oh, and if anything seems.. off.. on the site, let me know by hitting Contact up at the top.</p>
   </div>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/99PZchuidpo" frameborder="0" allow="autoplay; encrypted-media"
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2QEHYlEd8yw" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe>
   </div>
 </div>
