--- a/src/app/components/_main/main.component.html
+++ b/src/app/components/_main/main.component.html
@@ -5,10 +5,10 @@
   <div>
     <p>Hiya. I'm Zachary and this is my site. It has what I think is cool, some of my coding projects which can be found on the <a routerLink="../code">Code page</a>, and my <a routerLink="../wishlist">wishlist</a> if anyone really wants to know what to get for me.</p>
     <p>Have fun and see you around!</p>
-    <p>Oh, and if anything seems.. off.. on the site, let me know by hitting Contact up at the top.</p>
+    <p>See below for the most recent Fairy Tail Opening video. It's catchy and uplifting.</p>
   </div>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2QEHYlEd8yw" frameborder="0" allow="autoplay; encrypted-media"
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b2ahBdii2SQ" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe>
   </div>
 </div>
