--- a/src/app/components/_main/main.component.html
+++ b/src/app/components/_main/main.component.html
@@ -8,7 +8,7 @@
     <p>See below for the most recent Fairy Tail Opening video. It's catchy and uplifting.</p>
   </div>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b2ahBdii2SQ" frameborder="0" allow="autoplay; encrypted-media"
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hA5P15f8i9I" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe>
   </div>
 </div>
