--- a/src/app/components/_main/main.component.html
+++ b/src/app/components/_main/main.component.html
@@ -10,7 +10,7 @@
     <p>See below for one of the more recent Fairy Tail Opening videos. It's catchy and uplifting.</p>
   </div>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hA5P15f8i9I" frameborder="0" allow="autoplay; encrypted-media"
-      allowfullscreen></iframe>
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hA5P15f8i9I" frameborder="0"
+      allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 </div>
